# MemEval

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  MEMCLAW.md  NOTICE  OPENCLAW_PLUS.md  PROPMEM.md  README.md  pyproject.toml
scripts/: generate_category_chart.py  generate_chart.py  run_full_benchmark.py  stratified_sample.py
src/agents_memory/: __init__.py  answer_openai.py  cortex.py  evaluation.py  graphiti_system.py  locomo.py  memclaw.py  memory.py  openclaw.py  openclaw_plus.py  propmem.py  propmem_memory.py  token_tracker.py
src/agents_memory/benchmarks/: __init__.py  locomo.py  longmemeval.py
src/agents_memory/systems/: __init__.py  _helpers.py  _template.py  fullcontext.py  graphiti.py  hindsight.py  mem0.py  memclaw.py  memory_r1.py  memu.py  openclaw.py  propmem.py  propmem_no_bm25.py  propmem_no_chunks.py  propmem_no_clustering.py  propmem_no_entity.py  propmem_no_props.py  propmem_v4.py  simplemem.py
src/agents_memory/training/: __init__.py
src/agents_memory/training/memory_r1/: README.md  __init__.py  __main__.py  callbacks.py  eval.py  grpo.py  local_token_tracker.py  prepare_data.py  prompts.py  rewards.py  sft.py
