[project]
name = "agents-memory"
version = "0.1.0"
description = "Plug-and-play memory for agents — proposition extraction, entity-filtered retrieval, hybrid search"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Prosus Services B.V."}]
requires-python = ">=3.11"
dependencies = [
    "hindsight-client>=0.4.13",
    "numpy>=2.4.2",
    "openai>=1.0.0",
    "python-dotenv>=1.2.1",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
benchmark = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "simplemem>=0.1.0",
    "python-dotenv>=1.0.0",
    "memu-py>=1.3.0; python_version >= '3.13'",
    "mem0ai>=0.1.0",
    "httpx>=0.27.0",
    "tqdm>=4.66.0",
    "graphiti-core[kuzu]>=0.5",
    "matplotlib>=3.10.8",
    "huggingface_hub>=0.20.0",
]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents_memory"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
